<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">抽選</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="entry_text">抽選対象を入力してください。</string>
    <string name="lottery_quantity">抽選数：</string>
    <string name="entry_button1">入力欄追加</string>
    <string name="entry_button2">入力完了</string>
    <string name="confirm_text1">抽選対象を確認して下さい。</string>
    <string name="confirm_button1">抽選開始</string>
    <string name="confirm_button2">戻る</string>
    <string name="lottery_text1">当選するのは・・？</string>
    <string name="lottery_text2">当選済</string>
    <string name="lottery_button">次へ</string>
    <string name="result_text1">抽選結果</string>
    <string name="result_text2">が当選しました！！</string>
    <string name="result_button1">もう一度</string>
    <string name="result_button2">終了</string>
    <string name="deleteButton">削除</string>


</resources>
