<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin" >

    <TextView
        android:id="@+id/aboveScrollView"
        style="@style/text"
        android:layout_alignParentTop="true"
        android:text="@string/result_text1" />

    <ScrollView style="@style/scroll_view" >

        <LinearLayout
            android:id="@+id/winnersView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/belowScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/text"
                android:layout_weight="1" />
            
            <TextView
                style="@style/text"
                android:text="@string/result_text2" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >
            
            <Button
                android:id="@+id/appRestertButton"
                style="@style/below_button"
                android:text="@string/result_button1" />
            
            <Button
                android:id="@+id/appEndButton"
                style="@style/below_button"
                android:text="@string/result_button2" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>