<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin" >

    <LinearLayout 
        android:id="@+id/aboveScrollView"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView 
           style="@style/text"
           android:text="@string/lottery_text1" />
           
            <TextView
                android:id="@+id/lotteryView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:padding="20dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#000" />
        
        <TextView
            style="@style/text"
            android:text="@string/lottery_text2" />
        
    </LinearLayout>
    
    <ScrollView
        style="@style/scroll_view" 
        android:padding="10dp">
        <LinearLayout
            android:id="@+id/winnersView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal" >
            
        </LinearLayout>
    </ScrollView>
    
    <LinearLayout
        android:id="@+id/belowScrollView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/nextButton"
            style="@style/below_button"
            android:text="@string/lottery_button" />
    </LinearLayout>

</RelativeLayout>
